fixed button stretching
fixed button stretching on second entry

--- a/css/styles-body.css
+++ b/css/styles-body.css
@@ -389,7 +389,7 @@ footer {
 /******************* Responsive *******************/
 
 /* setup for landscape mode and larger screen sizes */
-@media screen and (min-width: 650px) {
+@media screen and (min-width: 714px) {
     .heroText p {
         font-size: 16px;
         font-weight: 300;
@@ -478,7 +478,9 @@ footer {
         margin-left: auto;
     }
     /* fixing the spacing to the cover for the second entry */
-    #travelChoice {padding-right: 40px;}
+    #travelChoice {
+        padding-top: 4rem;
+        padding-right: 40px;}
 
     .projectChoiceTitle { 
         /* make text block moveable */
@@ -545,6 +547,11 @@ footer {
 
     #line3 {transform: rotate(-37deg); margin: auto auto;}
     #line4 {transform: rotate(-38deg); margin: auto auto;}
+
+    /* scaling down the size of the cover entries to 90%  */
+    .cover img {
+        display: inline-block;
+        width: 90%;
 }
 
     /* setup for 1280 Desktop */
